--- a/i18n/en.json
+++ b/i18n/en.json
@@ -48,6 +48,7 @@
   "txid": "TXID",
   "cancelled": "Cancelled",
   "cancel_failed": "Cancel failed",
+  "accelerate": "Accelerate",
   "accelerate_failed": "Accelerate failed",
   "cancelling": "Cancelling",
   "accelerating": "Accelerating",
@@ -175,10 +176,11 @@
   "error_exceed": "%{label} exceed",
   "sign_in_with_social_account": "Sign In\nWith\nSocial\nAccounts",
   "continue_with": "Continue with",
-  "apple": "Apple",
-  "google": "Google",
-  "line": "Line",
-  "facebook": "Facebook",
+  "sign_in_btn_apple": "Sign in with Apple",
+  "sign_in_btn_google": "Sign in with Google",
+  "sign_in_btn_line": "Sign in with Line",
+  "sign_in_btn_facebook": "Sign in with Facebook",
+  "sign_in_btn_twitter": "Sign in with Twitter",
   "sign_in_agreement_part1": "By signing up, you agree to the",
   "and": "and",
   "term_of_Service": "Term of Service",
