add Walletconnect feature

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -7,6 +7,16 @@
   "latest": "Latest",
   "more": "More",
   "latest ": "Latest",
+  "walletconnect": "WalletConnect",
+  "walletconnecting_message": "WalletConnect connecting",
+  "session_request_message": "{{name}} requests to connect your wallet",
+  "allow_wallet_address": "Allow getting current wallet address",
+  "allow_signature_request": "Allow signature request from the current wallet",
+  "powered_by_walletconnect": "Powered by WalletConnect",
+  "disconnect": "Disconnect",
+  "address": "Addresss",
+  "reject": "Reject",
+  "approve": "Approve",
   "asset": "Asset",
   "receive": "Receive",
   "receiver": "Receiver",
@@ -45,7 +55,27 @@
   "amount": "Amount",
   "token_id": "Token ID",
   "transaction_fee": "Transaction fee",
+  "peer_id": "Peer ID",
+  "walletconnect": "WalletConnect",
+  "connection": "Connection",
+  "api_history": "API History",
+  "nonce": "Nonce",
+  "cannot_approve_template": "Cannot approve transaction: {{msg}}",
+  "api_name": "API Name",
+  "api_history_detail": "ApiHistory Detail",
+  "gas_price": "Gas Price",
+  "gas_limit": "Gas Limit",
+  "add_connection_hint": "Scan QR code to add connection",
+  "disconnect_all": "Disconnect All",
+  "add_connection": "Add Connection",
+  "wallet": "Wallet",
+  "payment_info": "Payment Info",
+  "transaction_request": "Transaction Request",
+  "sign_request": "Sign Request",
+  "message": "Message",
   "txid": "TXID",
+  "access_id": "ID",
+  "user_reject_call_request_message": "User reject the request",
   "cancelled": "Cancelled",
   "cancel_failed": "Cancel failed",
   "accelerate": "Accelerate",
@@ -62,6 +92,7 @@
   "slow": "Slow",
   "medium": "Medium",
   "fast": "Fast",
+  "default": "Default",
   "send_currency": "Send {{currencySymbol}}",
   "confirm_send_currency": "Confirm Send {{currencySymbol}}",
   "transaction": "Transaction",
@@ -72,9 +103,6 @@
   "balance": "Balance",
   "today": "Today",
   "daily": "Daily",
-  "slow": "Slow",
-  "medium": "Medium",
-  "fast": "Fast",
   "add_asset": "Add Asset",
   "add_successfully": "Add Successfully",
   "add_failed": "Add Failed",
@@ -127,11 +155,19 @@
   "development": "Development",
   "wallet_service_endpoint": "Wallet service endpoint",
   "version": "Version",
+  "forgot_pin_email_template": "Forgot pin code[{{email}}]",
+  "issue_description_template": "Issue description:",
+  "report_issue": "Report issue",
+  "report_issue_desc": "Report issue to us with log",
   "sign_out": "Sign out",
   "sign_out_up": "Sign Out",
   "api_code": "Api code",
   "pull_to_refresh": "Pull to refresh",
+  "fetch_transaction_fee_fail": "Get transaction fee fail",
+  "would_you_like_to_try_again": "Error occurred while fetching transaction fee, would you like to try again?",
   "sign_out_confirm_message": "Are you sure you want to sign out?",
+  "kill_all_session_confirm_message": "Are you sure you want to clear all connection?",
+  "kill_the_session_confirm_message": "Are you sure you want to disconnect with\n{{name}}?",
   "select_security_question": "Select security question",
   "setup_security_question_desc": "Setup security questions and answers for PIN restoration.",
   "enter_pin_code": "Enter PIN code",
@@ -204,6 +240,7 @@
   "change_complete": "Change submitted",
   "transaction_complete": "Transaction Complete",
   "transaction_failed": "Transaction Failed",
+  "failed_template": "{{name}} Failed",
   "transaction_received": "Transaction Received",
   "amount_received_content": "Amount {{amount}} {{currencySymbol}} from {{fromAddress}}",
   "tokenid_received_content": "Token {{amount}}({{currencySymbol}}) received from {{fromAddress}}",
