add filter for ApiHistory; add reportable; adjust RequestScreen UI

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -26,11 +26,15 @@
   "received": "Received",
   "Send": "Send",
   "all": "All",
+  "all_group_by_nonce": "All (Group by Nonce)",
+  "all_ungroup": "All (Ungroup)",
   "recent": "Recent",
   "all_time": "All time",
   "today": "Today",
   "yesterday": "Yesterday",
   "all_progress": "All progress",
+  "cancelable": "Cancelable",
+  "uncancelable": "Uncancelable",
   "pending": "Pending",
   "pending_up": "PENDING",
   "failed_up": "FAILED",
