update to latest version

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -9,7 +9,7 @@
   "no_eth_wallet_prompt": "Please create ETH wallet and try again",
   "signin_prompt": "Please sign in to continue",
   "receive_disconnect_template": "Receive disconnect: {{peerId}}",
-  "walletconnecting_message": "WalletConnect connecting",
+  "walletconnecting_message": "Connecting...",
   "session_request_message": "{{name}} requests to connect your wallet",
   "allow_wallet_address": "Allow getting current wallet address",
   "allow_signature_request": "Allow signature request from the current wallet",
@@ -74,6 +74,7 @@
   "wallet": "Wallet",
   "transaction_request": "Transaction Request",
   "sign_request": "Sign Request",
+  "send_signed_transaction": "Send Signed Transaction",
   "message": "Message",
   "txid": "TXID",
   "access_id": "ID",
@@ -1141,9 +1142,40 @@
   "transaction_reminder": "Users are reminded not to follow third party or unverified instructions to transfer assets to addresses or wallets that you do not control. Once a transaction occurs, the assets are transferred out and cannot be restored. If you wish to liquidate cryptocurrency assets (exchange them for fiat currency), please consult a verified, legitimate, and compliant exchange to conduct the transaction and avoid off-exchange transactions with individuals.",
   "warning": "Warning",
   "news_title": "Important message",
-  "news_message": "All CYBAVO Wallet users will be charged 0.1% platform fee for BTC transaction during withdraw since 2021/9/10",
+  "news_message": "All CYBAVO Wallet users will be charged 0.1% platform fee for BTC/ETH transaction during withdraw since 2022/3/25",
   "aml_warning": "It's a suspicious digital currency address after comparing with CYBAVO AML Solution Provider's List. If you interact with this address, you may be involved in the following risk.",
+  "aml_warning_contract": "It's a suspicious digital currency address after comparing with CYBAVO AML Solution Provider's List. If you interact with this contract, you may be involved in the following risk.",
   "aml_checkbox_hint": "I know the risk, continue to proceed anyway",
   "amount_check_template_multiples": "The amount has to be multiples of {{v}}",
-  "amount_check_template_min_balance": "The balance cannot less then {{v}} {{symbol}} after withdraw"
+  "amount_check_template_min_balance": "The balance cannot less then {{v}} {{symbol}} after withdraw",
+  "unsupported_operation": "unsupported operation",
+  "no_available_wallet_msg2": "No wallets can be paired with the protocol ({{info}})",
+  "select_wallet": "Select Wallet",
+  "select_wallet_hint": "Make sure the wallet's network is compatible with {{name}}",
+  "permit_warning": "Allow {{name}} to access your {{domainName}}?",
+  "permit_warning_desc": "By granting this permission, you’re allowing {{name}} to withdraw your {{domainName}} and automate transactions for you",
+  "score": "Score",
+  "error_gas_limit_null": "Gas limit cannot be null",
+  "error_gas_limit_invalid": "Invalid gas limit",
+  "error_gas_limit_less_then_min": "Gas limit cannot less then {{min}}",
+  "change_wallet": "Change Wallet",
+  "walletconnect_disclaimer_1": "IMPORTANT DISCLAIMER FOR WALLETCONNECT USAGE",
+  "walletconnect_disclaimer_2": "For the purpose of linking CYBAVO Pte. Ltd. (“CYBAVO”) products, services or software to platforms with decentralized applications (“DeFi Platforms”), you may be provided with certain services offered by a third party, including links to third-party websites or resources such as virtual currency information and related applications (collectively referred to as “third-party services''). CYBAVO does not control, approve of, use and bears no responsibility for any third-party services (including, but not limited to, misleading, incomplete, erroneous, offensive, obscene or other objectionable services). By acknowledging this DISCLAIMER you acknowledge that CYBAVO provides access to third-party services for the sake of convenience and is not responsible for the websites, resources or links to services displayed on such websites. You further agree to take full liability and undertake all risks arising out of your use of or interactions with the websites or resources of any and all third parties.",
+  "walletconnect_disclaimer_3": "You further acknowledge and agree that CYBAVO and its affiliates and subsidiaries bear no responsibility and no liability for the use, validity, quality, suitability, applicability and completeness of external DeFi platforms and/or third-party services, and makes no claims, guarantees, representations, warranties, terms, etc., whether implied or statutory, including any warranties of merchantability, title, non-infringement or fitness for a specific purpose. You understand and agree that the relevant DeFi platform and/or third-party services developers and/or suppliers shall be fully responsible for the technology and products provided by the DeFi platform and/or third-party services (including warranties and representations made by any DeFi platform and/or third-party services developer/supplier.) You also acknowledge and agree that CYBAVO and its subsidiaries are not developers, suppliers, resellers of or in any way affiliated with any external DeFi platforms and/or third-party services. All customer complaints or claims against the externally connected DeFi platforms and/or third-party services shall be settled solely between you and the DeFi platform and/or third-party services developers and/or suppliers. You hereby acknowledge and agree to hold harmless and exempt CYBAVO from any claims, complaints, errors, liabilities, losses, omissions arising from your use of these DeFi Platforms and/or third-party services even and especially when access to these DeFi Platforms and/or third-party services is provided via any CYBAVO products, services or software.",
+  "i_understand": "I understand",
+  "do_not_show_this_again": "Don't show this again",
+  "no_eip155_title": "Sign for Etherscan",
+  "no_eip155_desc": "Not click means use EIP155 signing",
+  "use_hex_title": "Send hex as message",
+  "no_legacy_sign_title": "Use standard sign",
+  "no_legacy_sign_desc": "Not click means using legacy sign",
+  "gas_limit_placeholder": "Type amount",
+  "gas_price_placeholder": "Type fee amount",
+  "custom": "Custom",
+  "error_custom_fee_null": "Custom fee cannot be null",
+  "error_custom_fee_invalid": "Custom fee cannot be null",
+  "error_custom_fee_is_zero": "Custom fee cannot be zero",
+  "see_more": "See More",
+  "see_less": "See Less",
+  "aml_title": "This is a risky address!"
 }
