--- a/i18n/zh-cn.json
+++ b/i18n/zh-cn.json
@@ -9,7 +9,7 @@
   "no_eth_wallet_prompt":"请建立 ETH 钱包后再试一次",
   "signin_prompt":"请登入以继续",
   "receive_disconnect_template":"已与 {{peerId}} 断开连线",
-  "walletconnecting_message":"WalletConnect 连接中",
+  "walletconnecting_message":"连接中...",
   "session_request_message":"{{name}} 要求连接您的钱包",
   "allow_wallet_address":"允许取得钱包地址",
   "allow_signature_request":"允许收到钱包的签名请求",
@@ -66,14 +66,15 @@
   "cannot_approve_template":"无法同意交易: {{msg}}",
   "api_name":"API 名称",
   "api_history_detail":"API 纪录详情",
-  "gas_price":"Gas 价格",
-  "gas_limit":"Gas 上限",
+  "gas_price": "Gas Price",
+  "gas_limit": "Gas Limit",
   "add_connection_hint":"扫描 QR code 以新增连线",
   "disconnect_all":"断开全部连线",
   "add_connection":"新增连线",
   "wallet":"钱包",
   "transaction_request":"交易请求",
   "sign_request":"签名请求",
+  "send_signed_transaction": "发送交易",
   "message":"讯息",
   "txid":"TXID",
   "access_id":"ID",
@@ -650,9 +651,38 @@
   "transaction_reminder": "请用户注意，切勿听信他人指示操作，将资产转移到你无法控制的地址或钱包中，交易一旦发生就无法还原，资产将会转移出去。如果要进行加密货币资产变现(换成法币)，请咨询合法合规的交易所进行交易，避免与个人进行场外交易。",
   "warning": "警语",
   "news_title": "重要讯息",
-  "news_message": "自 2021/9/10，所有使用钱包进行 BTC 交易的客户将被抽取 0.1% 的手续费, 手续费将在提领时被抽取",
+  "news_message": "自 2022/3/25，所有使用钱包进行 BTC/ETH 交易的客户将被抽取 0.1% 的手续费, 手续费将在提领时被抽取",
   "aml_warning": "与CYBAVO AML Solution Provider's List进行比较后，这是一个可疑的数字货币地址。如果你与这个地址互动，你可能会遭遇以下风险。",
   "aml_checkbox_hint": "我知道有风险，无论如何继续进行此交易。",
   "amount_check_template_multiples": "金额必须为 {{v}} 的倍数",
-  "amount_check_template_min_balance": "交易后余额不可少于 {{v}} {{symbol}}"
+  "amount_check_template_min_balance": "交易后余额不可少于 {{v}} {{symbol}}",
+  "unsupported_operation": "不支援的操作",
+  "no_available_wallet_msg2": "没有可以配对的钱包 ({{info}})","select_wallet": "选择钱包",
+  "select_wallet_hint": "请确保钱包的网路与 {{name}} 相同",
+  "permit_warning": "允许 {{name}} 使用您的 {{domainName}}?",
+  "permit_warning_desc": "若授与此权限, 您将允许 {{name}} 操作您的 {{domainName}} 资产且进行任意交易",
+  "score": "分数",
+  "error_gas_limit_null": "Gas limit 不可为空",
+  "error_gas_limit_invalid": "不正确的 gas limit",
+  "error_gas_limit_less_then_min": "Gas limit 不可少于 {{min}}",
+  "change_wallet": "更换钱包",
+  "walletconnect_disclaimer_1": "IMPORTANT DISCLAIMER FOR WALLETCONNECT USAGE",
+  "walletconnect_disclaimer_2": "For the purpose of linking CYBAVO Pte. Ltd. (“CYBAVO”) products, services or software to platforms with decentralized applications (“DeFi Platforms”), you may be provided with certain services offered by a third party, including links to third-party websites or resources such as virtual currency information and related applications (collectively referred to as “third-party services''). CYBAVO does not control, approve of, use and bears no responsibility for any third-party services (including, but not limited to, misleading, incomplete, erroneous, offensive, obscene or other objectionable services). By acknowledging this DISCLAIMER you acknowledge that CYBAVO provides access to third-party services for the sake of convenience and is not responsible for the websites, resources or links to services displayed on such websites. You further agree to take full liability and undertake all risks arising out of your use of or interactions with the websites or reso urces of any and all third parties.",
+  "walletconnect_disclaimer_3": "You further acknowledge and agree that CYBAVO and its affiliates and subsidiaries bear no responsibility and no liability for the use, validity, quality, suitability, applicability and completeness of external DeFi platforms and/or third-party services, and makes no claims, guarantees, representations, warranties, terms, etc., whether implied or statutory, including any warranties of merchantability, title, non-infringement or fitness for a specific purpose. You understand and agree that the relevant DeFi platform and/or third-party services developers and/or suppliers shall be fully responsible for the technology and products provided by the DeFi platform and/or third-party services (including warranties and representations made by any DeFi platform and/or third-party services developer/supplier.) You also acknowledge and agree that CYBAVO and its subsidiaries are not developers, suppliers, resellers of or in any way affiliated with any external DeFi pla tforms and/or third-party services. All customer complaints or claims against the externally connected DeFi platforms and/or third-party services shall be settled solely between you and the DeFi platform and/or third-party services developers and/or suppliers. You hereby acknowledge and agree to hold harmless and exempt CYBAVO from any claims, complaints, errors, liabilities, losses, omissions arising from your use of these DeFi Platforms and/or third-party services even and especially when access to these DeFi Platforms and/or third-party services is provided via any CYBAVO products, services or software.",
+  "i_understand": "我知道了",
+  "do_not_show_this_again": "下次不再显示",
+  "no_eip155_title": "Etherscan 相容签名格式",
+  "no_eip155_desc": "不勾选表示使用 EIP155 格式签名",
+  "use_hex_title": "以 Hex 格式传送讯息",
+  "no_legacy_sign_title": "使用标准签名",
+  "no_legacy_sign_desc": "不勾选表示使用 legacy sign",
+  "gas_limit_placeholder": "输入 gas limit",
+  "gas_price_placeholder": "输入手续费",
+  "custom": "自订",
+  "error_custom_fee_null": "自订手续费不可为空",
+  "error_custom_fee_invalid": "自订手续费不正确",
+  "error_custom_fee_is_zero": "自订手续费不可为0",
+  "see_more": "显示更多",
+  "see_less": "显示较少",
+  "aml_title": "这是有风险的地址!"
 }
