--- a/i18n/zh-tw.json
+++ b/i18n/zh-tw.json
@@ -9,7 +9,7 @@
   "no_eth_wallet_prompt": "請建立 ETH 錢包後再試一次",
   "signin_prompt": "請登入以繼續",
   "receive_disconnect_template": "已與 {{peerId}} 斷開連線",
-  "walletconnecting_message": "WalletConnect 連接中",
+  "walletconnecting_message": "連接中...",
   "session_request_message": "{{name}} 要求連接您的錢包",
   "allow_wallet_address": "允許取得錢包地址",
   "allow_signature_request": "允許收到錢包的簽名請求",
@@ -66,14 +66,15 @@
   "cannot_approve_template": "無法同意交易: {{msg}}",
   "api_name": "API 名稱",
   "api_history_detail": "API 紀錄詳情",
-  "gas_price": "Gas 價格",
-  "gas_limit": "Gas 上限",
+  "gas_price": "Gas Price",
+  "gas_limit": "Gas Limit",
   "add_connection_hint": "掃描 QR code 以新增連線",
   "disconnect_all": "斷開全部連線",
   "add_connection": "新增連線",
   "wallet": "錢包",
   "transaction_request": "交易請求",
   "sign_request": "簽名請求",
+  "send_signed_transaction": "發送交易",
   "message": "訊息",
   "txid": "TXID",
   "access_id": "ID",
@@ -651,9 +652,39 @@
   "transaction_reminder": "請用戶注意，切勿聽信他人指示操作，將資產轉移到你無法控制的地址或錢包中，交易一旦發生就無法還原，資產將會轉移出去。如果要進行加密貨幣資產變現(換成法幣)，請諮詢合法合規的交易所進行交易，避免與個人進行場外交易。",
   "warning": "警語",
   "news_title": "重要訊息",
-  "news_message": "自 2021/9/10, 所有使用錢包進行 BTC 交易的客戶將會被抽取 0.1% 的手續費, 手續費將在提領時被抽取",
+  "news_message": "自 2022/3/25, 所有使用錢包進行 BTC/ETH 交易的客戶將會被抽取 0.1% 的手續費, 手續費將在提領時被抽取",
   "aml_warning": "與CYBAVO AML Solution Provider's List進行比較後，這是一個可疑的數字貨幣地址。如果你與這個地址互動，你可能會遭遇以下風險。",
   "aml_checkbox_hint": "我知道有風險，無論如何繼續進行此交易。",
   "amount_check_template_multiples": "金額必須為 {{v}} 的倍數",
-  "amount_check_template_min_balance": "交易後餘額不可少於 {{v}} {{symbol}}"
+  "amount_check_template_min_balance": "交易後餘額不可少於 {{v}} {{symbol}}",
+  "unsupported_operation": "不支援的操作",
+  "no_available_wallet_msg2": "沒有可以配對的錢包 ({{info}})",
+  "select_wallet": "選擇錢包",
+  "select_wallet_hint": "請確保錢包的網路與 {{name}} 相同",
+  "permit_warning": "允許 {{name}} 使用您的 {{domainName}}?",
+  "permit_warning_desc": "若授與此權限, 您將允許 {{name}} 操作您的 {{domainName}} 資產且進行任意交易",
+  "score": "分數",
+  "error_gas_limit_null": "Gas limit 不可為空",
+  "error_gas_limit_invalid": "不正確的 gas limit",
+  "error_gas_limit_less_then_min": "Gas limit 不可少於 {{min}}",
+  "change_wallet": "更換錢包",
+  "walletconnect_disclaimer_1": "IMPORTANT DISCLAIMER FOR WALLETCONNECT USAGE",
+  "walletconnect_disclaimer_2": "For the purpose of linking CYBAVO Pte. Ltd. (“CYBAVO”) products, services or software to platforms with decentralized applications (“DeFi Platforms”), you may be provided with certain services offered by a third party, including links to third-party websites or resources such as virtual currency information and related applications (collectively referred to as “third-party services''). CYBAVO does not control, approve of, use and bears no responsibility for any third-party services (including, but not limited to, misleading, incomplete, erroneous, offensive, obscene or other objectionable services). By acknowledging this DISCLAIMER you acknowledge that CYBAVO provides access to third-party services for the sake of convenience and is not responsible for the websites, resources or links to services displayed on such websites. You further agree to take full liability and undertake all risks arising out of your use of or interactions with the websites or resources of any and all third parties.",
+  "walletconnect_disclaimer_3": "You further acknowledge and agree that CYBAVO and its affiliates and subsidiaries bear no responsibility and no liability for the use, validity, quality, suitability, applicability and completeness of external DeFi platforms and/or third-party services, and makes no claims, guarantees, representations, warranties, terms, etc., whether implied or statutory, including any warranties of merchantability, title, non-infringement or fitness for a specific purpose. You understand and agree that the relevant DeFi platform and/or third-party services developers and/or suppliers shall be fully responsible for the technology and products provided by the DeFi platform and/or third-party services (including warranties and representations made by any DeFi platform and/or third-party services developer/supplier.) You also acknowledge and agree that CYBAVO and its subsidiaries are not developers, suppliers, resellers of or in any way affiliated with any external DeFi platforms and/or third-party services. All customer complaints or claims against the externally connected DeFi platforms and/or third-party services shall be settled solely between you and the DeFi platform and/or third-party services developers and/or suppliers. You hereby acknowledge and agree to hold harmless and exempt CYBAVO from any claims, complaints, errors, liabilities, losses, omissions arising from your use of these DeFi Platforms and/or third-party services even and especially when access to these DeFi Platforms and/or third-party services is provided via any CYBAVO products, services or software.",
+  "i_understand": "我知道了",
+  "do_not_show_this_again": "下次不再顯示",
+  "no_eip155_title": "Etherscan 相容簽名格式",
+  "no_eip155_desc": "不勾選表示使用 EIP155 格式簽名",
+  "use_hex_title": "以 Hex 格式傳送訊息",
+  "no_legacy_sign_title": "使用標準簽名",
+  "no_legacy_sign_desc": "不勾選表示使用 legacy sign",
+  "gas_limit_placeholder": "輸入 gas limit",
+  "gas_price_placeholder": "輸入手續費",
+  "custom": "自訂",
+  "error_custom_fee_null": "自訂手續費不可為空",
+  "error_custom_fee_invalid": "自訂手續費不正確",
+  "error_custom_fee_is_zero": "自訂手續費不可為0",
+  "see_more": "顯示更多",
+  "see_less": "顯示較少",
+  "aml_title": "這是有風險的地址!"
 }
